# shimrod

./: .gitignore  CMakeLists.txt  README.md
libshimrod/: CMakeLists.txt
libshimrod/include/: Fractals.h  Image.h  Magick++-no-warn.h  Viewport.h
libshimrod/src/: Fractals.cc  Image.cc  Viewport.cc
shimrod-cli/: CMakeLists.txt
shimrod-cli/src/: main.cc
src/: .dir-locals.el  Fractals.cc  Image.cc  Viewport.cc  main.cc
src/include/: Fractals.h  Image.h  Viewport.h
test/: CMakeLists.txt
test/src/: TestViewport.cc
